# wasm-future

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cpu/: Makefile
cpu/src/: SuperStack.sv  SuperStack.svh  core.sv  genrom.sv  opcodes.svh  stack.sv  wasm_accelerator.sv
cpu/test/: SuperStack_tb.sv  genrom_tb.sv  stack_tb.sv
cpu/test/core/: block_tb.sv  br_if_tb.sv  br_table1_tb.sv  br_table2_tb.sv  br_table3_tb.sv  br_tb.sv  call1_tb.sv  call2_tb.sv  core_tb.gtkw  drop_tb.sv  else1_tb.sv  else2_tb.sv  f32.const_tb.sv  f32.demote-f64_tb.sv  f32.reinterpret-i32_tb.sv  f64.const_tb.sv  f64.reinterpret-i64_tb.sv  get_local1_tb.sv  get_local2_tb.sv  i32.add_tb.sv  i32.const_tb.sv  i32.eq1_tb.sv  i32.eq2_tb.sv  i32.eqz1_tb.sv  i32.eqz2_tb.sv  i32.ne1_tb.sv  i32.ne2_tb.sv  i32.reinterpret-f32_tb.sv  i32.sub_tb.sv  i32.wrap-i64_tb.sv  i64.add_tb.sv  i64.const_tb.sv  i64.eq1_tb.sv  i64.eq2_tb.sv  i64.eqz1_tb.sv  i64.eqz2_tb.sv  i64.ne1_tb.sv  i64.ne2_tb.sv  i64.reinterpret-f64_tb.sv  i64.sub_tb.sv  (+9 more)
include/: interp.hpp  wasm.h
scripts/: install_wasm_sdk.sh
src/: main.cpp
test/: asm.c  asm.wasm  asm.wat  dump_asm.sh
